# tree-sitter-ohm

./: .editorconfig  .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  pnpm-lock.yaml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
editor_queries/helix/: highlights.scm  indents.scm  injections.scm
editor_queries/neovim/: context.scm  folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: base.txt  grammar.txt  rule.txt  rule_body.txt
test/highlight/: base.ohm  built-ins.ohm  grammar.ohm  rule.ohm  rule_body.ohm
test/sample/: ohm-grammar.ohm
test/tags/: definitions.ohm  references.ohm
